# hope

./: .gitignore  Cargo.toml  README.md  test.sh
cache-log/: Cargo.toml
cache-log/src/: lib.rs
fixtures/: README.md
fixtures/twin-a/: Cargo.toml
fixtures/twin-b/: Cargo.toml
hope/: Cargo.toml
hope/src/: build_script.rs  cache.rs  main.rs
hope/tests/: integration_tests.rs
wrapper/: Cargo.toml
wrapper/src/: cache.rs  dep_info.rs  main.rs
wrapper/tests/: integration_tests.rs
