[package]
name = "hope-cache-log"
description = "A WIP rustc wrapper for caching build artifacts. (Support library.)"
version = "0.0.1"
edition = "2021"
authors = ["Jeff Parsons <jeff@parsons.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jeffparsons/hope"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fd-lock = "4.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
