[package]
name = "hope"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cache-log = { path = "../cache-log" }
filetime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.41"
directories = "5.0"

[dev-dependencies]
tempfile = "3.10"
