[package]
name = "hope"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cache-log = { path = "../cache-log" }
filetime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tempfile = "3.10"
fd-lock = "4.0.2"
walkdir = "2.5.0"

[dev-dependencies]
