[package]
name = "hope"
description = "A WIP rustc wrapper for caching build artifacts."
version = "0.0.1"
edition = "2021"
authors = ["Jeff Parsons <jeff@parsons.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jeffparsons/hope"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hope-cache-log = { version = "0.0.1" }
filetime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tempfile = "3.10"
fd-lock = "4.0.2"
walkdir = "2.5.0"

[dev-dependencies]
